--- a/FreelanceBot/Dockerfile
+++ b/FreelanceBot/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12
 WORKDIR /app
-COPY requirements.txt requirements.txt
+COPY requirements.txt /app/requirements.txt
 RUN pip3 install --upgrade setptools
 RUN pip3 install -r requirements.txt
 COPY . .
