--- a/RequestParser/Dockerfile
+++ b/RequestParser/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.12
-WORKDIR /app/parser
-COPY requirements.txt /app/parser/requirements.txt
+WORKDIR /app/request_parser
+COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
