--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: ./RequestParser
       dockerfile: Dockerfile
     container_name: request_parser
+    env_file:
+      - .env.test
     ports:
       - "5000:5000"
 
@@ -12,5 +14,7 @@ services:
       context: ./FreelanceBot
       dockerfile: Dockerfile
     container_name: freelance_bot
+    env_file:
+      - .env.test
     depends_on:
       - request_parser
