--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ BOT_TOKEN="6567650179:AAGgzkRmYKGwwWNDuznV_l8poqcrdbYq4nU"
 API_ID=28496112
 API_HASH="9a760f8886eb20ae322f4cde65a93f31"
 USER_BOT_PASSWORD="jvgggigz9teb"
+CHAT_BOT_ID=6567650179
