--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
-BOT_TOKEN="6567650179:AAGgzkRmYKGwwWNDuznV_l8poqcrdbYq4nU"
+BOT_TOKEN="6723318386:AAFckUlE0jZhd7eJqfqglCAyalTXJjS0Qu4"
 API_ID=28496112
 API_HASH="9a760f8886eb20ae322f4cde65a93f31"
 USER_BOT_PASSWORD="jvgggigz9teb"
+CHAT_BOT_ID=6723318386
