--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     container_name: request_parser
     env_file:
-      - .env
+      - .env.test
     ports:
       - "5000:5000"
 
@@ -15,6 +15,6 @@ services:
       dockerfile: Dockerfile
     container_name: freelance_bot
     env_file:
-      - .env
+      - .env.test
     depends_on:
       - request_parser
