split freelance bot for target and smm category; update docker config for new bot shown

--- a/TargetFreelanceBot/Dockerfile
+++ b/TargetFreelanceBot/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.12
-WORKDIR /app/freelance_bot
+WORKDIR /app/target_freelance_bot
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
