--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-BOT_TOKEN="6567650179:AAGgzkRmYKGwwWNDuznV_l8poqcrdbYq4nU"
+TARGET_BOT_TOKEN="7352878183:AAE26gk3Bv0K_ApYZupMwfA7ASoJoekcEEI"
+SMM_BOT_TOKEN="6914300741:AAEqhG19_McFmevL8cnt_Uua7NXtZw0mBl8"
 API_ID=28496112
 API_HASH="9a760f8886eb20ae322f4cde65a93f31"
 USER_BOT_PASSWORD="jvgggigz9teb"
