--- a/.env.test
+++ b/.env.test
@@ -3,4 +3,5 @@ SMM_BOT_TOKEN="6914300741:AAEqhG19_McFmevL8cnt_Uua7NXtZw0mBl8"
 API_ID=28496112
 API_HASH="9a760f8886eb20ae322f4cde65a93f31"
 USER_BOT_PASSWORD="jvgggigz9teb"
-CHAT_BOT_ID=6723318386
+TARGET_CHAT_BOT_ID=7352878183
+SMM_CHAT_BOT_ID=6914300741
