--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     container_name: request_parser
     env_file:
-      - .env.test
+      - ${WINJOB_ENV_FILE}
     ports:
       - "5000:5000"
 
@@ -15,7 +15,7 @@ services:
       dockerfile: Dockerfile
     container_name: target_freelance_bot
     env_file:
-      - .env.test
+      - ${WINJOB_ENV_FILE}
     depends_on:
       - request_parser
 
@@ -25,6 +25,6 @@ services:
       dockerfile: Dockerfile
     container_name: smm_freelance_bot
     env_file:
-      - .env.test
+      - ${WINJOB_ENV_FILE}
     depends_on:
       - request_parser
