add switch between test and prod configs 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: ./RequestParser
       dockerfile: Dockerfile
     container_name: request_parser
+    env_file:
+      - ${WINJOB_ENV_FILE}
     ports:
       - "5000:5000"
 
@@ -12,6 +14,8 @@ services:
       context: ./TargetFreelanceBot
       dockerfile: Dockerfile
     container_name: target_freelance_bot
+    env_file:
+      - ${WINJOB_ENV_FILE}
     depends_on:
       - request_parser
 
@@ -20,5 +24,7 @@ services:
       context: ./SMMFreelanceBot
       dockerfile: Dockerfile
     container_name: smm_freelance_bot
+    env_file:
+      - ${WINJOB_ENV_FILE}
     depends_on:
       - request_parser
