add telegram profile for dev in order to remove temporary bans when using the account simultaneouslyЭ

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ API_ID=28496112
 API_HASH="9a760f8886eb20ae322f4cde65a93f31"
 USER_BOT_SESSION_STRING = "1BJWap1wBu6ZmjAt7PKzlBt6Ql89QNlZdBMJGsSUTWYweWEYUGv273YDjF-cyho_xHdW30BIF5itMOjI1SeIniUOPv0zjCi-ZGmuoqDaEpXntZalUBo8FrFU6w-Q3Nl5OS_becNPY6KZojMWkedCTpidFzeB-GoKaF4n8k77iavsH-34c9dsItDoK8EkKD3e9PTMBppvqPAOWrMSk8DTqg-MeXmMaGdEfbckyX3c1Sjb32-TpwRnRw0PKuB0ycW9cX_twytzpDlxfWgh31PCldx9Ies__uy5XGIiDmDAEWrACaSm9mwYFvutJY5SlAqgp4iD55e-WNexNuKyHVvbk97UAAEB0nLE="
 USER_BOT_PASSWORD="jvgggigz9teb"
+USER_BOT_ID=6463487004
 TARGET_CHAT_BOT_ID=7352878183
 SMM_CHAT_BOT_ID=6914300741
 TARGET_CHAT_BOT_OPERATOR=858334948
